fix genres
